[package]
name = "google-hashcode-score-2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.2", features=["cargo"]}
env_logger = "0.8.3"
anyhow = "1.0"
log = "0.4"
num-format = "0.4.0"
nom = "6.1.0"
