[package]
name = "google-hashcode-score-2022"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.1.2", features=["cargo"]}
env_logger = "0.8.3"
anyhow = "1.0"
log = "0.4"
num-format = "0.4.0"
nom = "6.1.0"
fxhash = "0.2.1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1"

[profile.release]
debug = true
